# llm-from-scratch

./: .Gitignore  1-selfAttentionMechanism.ipynb  2-tokenisation.ipynb  4-gptFromScratch.ipynb  5-pretraining.ipynb  6-classification.ipynb  7-fineTuning.ipynb  CalcLossLoader.py  CreateDataLoader.py  GELU.py  GPTModel.py  Generate.py  GenerateTextSimple.py  LoadWeightsIntoGpt.py  MultiHeadAttention.py  PlotLosses.py  README.md  TokensAndIds.py  TrainModelSimple.py  TransformerBlock.py  pyproject.toml
files/: the-verdict.txt
