[project]
name = "llm-from-scratch"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "notebook>=7.4.3",
    "numpy==2.1.3",
    "tensorflow>=2.19.0",
    "tiktoken>=0.9.0",
    "torch==2.7.0",
    "tqdm>=4.67.1",
]
